--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "test": "echo \"No test specified\" && exit 1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
