--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "sqlite3": "^5.1.2",
     "ts-node": "^10.9.1"
   },
