--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "initdb": "ts-node src/initdb.ts",
-    "test": "echo \"No test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -21,7 +21,9 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.3",
     "@types/jsonwebtoken": "^8.5.9",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
   }
